[workspace]
resolver = "3"
members = [
  "shared-libs/crates/start-core",
  "projects/start-os",
  "projects/start-os/backup-fs",
  "projects/start-cli",
  "projects/start-registry",
  "projects/start-tunnel",
]
exclude = ["vendor/patch-db"]

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3
