[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "The core of the Start9 Embassy Operating System"
documentation = "https://docs.rs/embassy-os"
edition = "2018"
keywords = [
  "self-hosted",
  "raspberry-pi",
  "privacy",
  "bitcoin",
  "full-node",
  "lightning",
]
name = "embassy-os"
readme = "README.md"
repository = "https://github.com/Start9Labs/embassy-os"
version = "0.3.0-pre.0"

[lib]
name = "embassy"
path = "src/lib.rs"

[[bin]]
name = "embassyd"
path = "src/bin/embassyd.rs"

[[bin]]
name = "embassy-init"
path = "src/bin/embassy-init.rs"

[[bin]]
name = "embassy-sdk"
path = "src/bin/embassy-sdk.rs"

[[bin]]
name = "embassy-cli"
path = "src/bin/embassy-cli.rs"

[features]
avahi = ["avahi-sys"]
default = ["avahi", "sound"]
sound = []

[dependencies]
aes = { version = "0.7.5", features = ["ctr"] }
anyhow = "1.0.40"
async-trait = "0.1.42"
avahi-sys = { git = "https://github.com/Start9Labs/avahi-sys", version = "0.10.0", branch = "feature/dynamic-linking", features = [
  "dynamic",
], optional = true }
base32 = "0.4.0"
basic-cookies = "0.1.4"
bollard = "0.11.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33"
cookie_store = "0.15.0"
digest = "0.9.0"
divrem = "1.0.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
emver = { version = "0.1.2", features = ["serde"] }
fd-lock-rs = "0.1.3"
futures = "0.3.8"
git-version = "0.3.4"
hex = "0.4.3"
hmac = "0.11.0"
http = "0.2.3"
hyper-ws-listener = { git = "https://github.com/Start9Labs/hyper-ws-listener.git", branch = "main" }
indexmap = { version = "1.6.2", features = ["serde"] }
isocountry = "0.3.2"
itertools = "0.10.0"
jsonpath_lib = "0.3.0"
lazy_static = "1.4"
libc = "0.2.86"
log = "0.4.11"
nix = "0.22.0"
openssh-keys = "0.5.0"
openssl = { version = "0.10.30", features = ["vendored"] }
patch-db = { version = "*", path = "../../patch-db/patch-db", features = [
  "log",
] }
pbkdf2 = "0.9.0"
pin-project = "1.0.6"
prettytable-rs = "0.8.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.7.3"
regex = "1.4.2"
reqwest = { version = "0.11.2", features = ["stream", "json", "socks"] }
reqwest_cookie_store = "0.2.0"
rpassword = "5.0.0"
rpc-toolkit = { version = "*", path = "../../rpc-toolkit/rpc-toolkit" }
rust-argon2 = "0.8.3"
scopeguard = "1.1" # because avahi-sys fucks your shit up
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_cbor = { package = "ciborium", version = "0.1.0" }
serde_json = "1.0.59"
serde_toml = { package = "toml", version = "0.5.8" }
serde_yaml = "0.8.14"
sha2 = "0.9.3"
simple-logging = "2.0"
sqlx = { version = "0.5", features = [
  "chrono",
  "offline",
  "runtime-tokio-rustls",
  "sqlite",
] }
tar = "0.4.35"
thiserror = "1.0.24"
tokio = { version = "1.11.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
tokio-stream = { version = "0.1.5", features = ["io-util", "sync"] }
tokio-tar = { git = "https://github.com/dr-bonez/tokio-tar.git" }
tokio-tungstenite = "0.14.0"
tokio-util = { version = "0.6.6", features = ["io"] }
torut = { git = "https://github.com/Start9Labs/torut.git", branch = "update/dependencies" }
typed-builder = "0.9.0"
url = { version = "2.2.1", features = ["serde"] }
