[package]
name = "compat"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version="1.0.118", features=["derive", "rc"] }
serde_yaml = "0.8.17"
embassy-os = { path="../appmgr", default-features=false }
emver = { version = "0.1.2", features = ["serde"] }
futures = "0.3.8"
rust-argon2 = "0.8.3"
rand = "0.7"
tokio = { version = "1.8.1", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["io-util", "sync"] }
anyhow = "1.0.40"
log = "0.4.11"
itertools = "0.10.0"
regex = "1.4.2"
async-std = { version = "1.6.0", features = ["attributes"] }
failure = "0.1.8"
linear-map = { version = "1.2", features = ["serde_impl"] }
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4"
indexmap = { version = "1.6.2", features = ["serde"] }
beau_collector = "0.2.1"
nix = "0.22.0"