[package]
name = "startwrt-ctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
async_cell = "0.2.2"
color-eyre = "0.6.3"
futures = "0.3.31"
nix = { version="0.29.0", features = ["fs"] }
tokio = { version = "1.41.1", features = ["tracing", "process", "socket2", "time", "io-util", "macros", "rt", "sync", "net", "rt-multi-thread", "io-std", "signal"] }
tracing = "0.1"
tracing-rfc-5424 = "0.1"
tracing-subscriber = "0.3"
serde = { workspace = true }
serde_yaml = "0.9.34"
macaddr = "1.0.0"
uciedit = { workspace = true, version = "0.1.0" }
rpc-toolkit = { git = "https://github.com/Start9Labs/rpc-toolkit", default-features = false }
clap = "4.5.37"
axum-server = "0.7.2"
axum = "0.8.6"
thiserror = { workspace = true }
imbl-value = "0.4.3"
serde_json = "1.0.140"
rand = "0.9.1"
once_cell = "1.21.3"
chrono = { workspace = true }
fd-lock-rs = { workspace = true }
tempfile = "3.14.0"
