[package]
name = "start-os"
version = "0.4.0-beta.10" # VERSION_BUMP
edition = "2024"
license = "MIT"
repository = "https://github.com/Start9Labs/start-os"

[[bin]]
name = "startbox"
path = "src/bin/startbox.rs"

[[bin]]
name = "start-container"
path = "src/bin/start-container.rs"

[features]
default = []
beta = ["start-core/beta"]
console = ["start-core/console"]
dev = ["start-core/dev"]
test = ["start-core/test"]
unstable = ["start-core/unstable"]

[dependencies]
start-core = { path = "../shared/crates/start-core" }
include_dir = "0.7.3"
