[package]
name = "startwrt-ctrl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "startwrt"
path = "src/bin/startwrt.rs"

[dependencies]
async_cell = "0.2.2"
color-eyre = "0.6.3"
futures = "0.3.31"
nix = { version="0.29.0", features = ["fs", "signal"] }
tokio = { version = "1.41.1", features = ["tracing", "process", "socket2", "time", "io-util", "macros", "rt", "sync", "net", "rt-multi-thread", "io-std", "signal"] }
tracing = "0.1"
tracing-rfc-5424 = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_yaml = "0.9.34"
macaddr = "1.0.0"
uciedit = { workspace = true, version = "0.1.0" }
rpc-toolkit = { git = "https://github.com/Start9Labs/rpc-toolkit", default-features = false }
clap = "4.5.37"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum = { version = "0.8.6", features = ["ws", "multipart"] }
include_dir = "0.7"
mime_guess = "2"
thiserror = { workspace = true }
imbl-value = "0.4.3"
serde_json = "1.0.140"
rand = "0.9.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
chrono = { workspace = true }
fd-lock-rs = { workspace = true }
tempfile = "3.14.0"
rpassword = "7.3.1"
itertools = "0.14.0"
pwhash = "1.0.0"
sha-crypt = "0.5.0"
base32 = "0.5.1"
sha2 = "0.10.8"
digest = "0.10.7"
basic-cookies = "0.1.5"
http = "1.0"
cookie_store = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
reqwest_cookie_store = "0.9"
openssh-keys = "0.6.2"
openssl = { version = "0.10", features = ["vendored"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
rusqlite = { version = "0.34", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"
